// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleBadge selected ToggleBadge renders with default props 1`] = `
.c0 {
  border-radius: 2px;
  border: 0;
  display: inline-block;
  font-weight: 700;
  font-family: inherit;
  cursor: pointer;
  background-color: #56aafe;
  color: #178afe;
  margin-top: 4px;
  margin-bottom: 4px;
  margin-left: 4px;
  margin-right: 4px;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 12px;
}

.c0:hover {
  background-color: #56aafe;
}

<button
  className="c0"
  color="blue"
  fontSize={0}
  selected={true}
/>
`;

exports[`ToggleBadge selected one with background-color and text color passed as props hover state 1`] = `
.c0 {
  border-radius: 2px;
  border: 0;
  display: inline-block;
  font-weight: 700;
  font-family: inherit;
  cursor: pointer;
  background-color: #17fe17;
  color: #fe1717;
  margin-top: 4px;
  margin-bottom: 4px;
  margin-left: 4px;
  margin-right: 4px;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
}

.c0:hover {
  background-color: #17fe17;
}

<button
  className="c0"
  color="red"
  fontSize={1}
  selected={true}
/>
`;

exports[`ToggleBadge unselected ToggleBadge renders with default props 1`] = `
.c0 {
  border-radius: 2px;
  border: 0;
  display: inline-block;
  font-weight: 700;
  font-family: inherit;
  cursor: pointer;
  background-color: transparent;
  color: #178afe;
  margin-top: 4px;
  margin-bottom: 4px;
  margin-left: 4px;
  margin-right: 4px;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 12px;
}

.c0:hover {
  background-color: #56aafe;
}

<button
  className="c0"
  color="blue"
  fontSize={0}
  selected={false}
/>
`;
